[B]Version 0.0.2[/B]

- use dynamic config to allow updating all sorts of things

[B]Version 0.0.1[/B]

- initial revision.