@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="script.advcfg" name="Advanced Configuration" version="0.0.2" provider-name="Micah Galizia">
+<addon id="script.advcfg" name="Advanced Configuration" version="0.0.3" provider-name="Micah Galizia">
   <requires>
     <import addon="xbmc.python" version="2.20.0"/>
     <import addon="script.module.requests" />
